# chroma-db-viewer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  main.py  pyproject.toml  run_app.bat
docs/: ARCHITECTURE.md
static/: app.js  styles.css
templates/: index.html
tests/: test_api_smoke.py
