[project]
name = "chroma-explorer"
version = "0.1.0"
description = "Modern, local-first web UI to browse and query ChromaDB collections."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Chroma Explorer Contributors" },
]
keywords = ["chroma", "chromadb", "vector-db", "retrieval", "semantic-search", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "chromadb>=0.5.5",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "sentence-transformers>=3.1.1",
    "uvicorn>=0.35.0",
]

[project.urls]
Homepage = "https://github.com/your-org/chroma-explorer"
Repository = "https://github.com/your-org/chroma-explorer"
Issues = "https://github.com/your-org/chroma-explorer/issues"

[project.scripts]
chroma-explorer = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.4",
]
